--- a/po/lt.po
+++ b/po/lt.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-09-17 22:15+0300\n"
-"PO-Revision-Date: 2021-09-09 21:28+0300\n"
+"POT-Creation-Date: 2021-09-18 10:35+0200\n"
+"PO-Revision-Date: 2021-09-14 00:00+0300\n"
 "Last-Translator: Audronis <adga45@gmail.com>\n"
 "Language-Team: Adga (C) <adga45@gmail.com>\n"
 "Language: lt_LT\n"
@@ -506,15 +506,23 @@ msgstr "??"
 msgid "A"
 msgstr "A"
 
+#, fuzzy
 msgid "A completed recording timer is about to put your receiver in standby mode. Would you like to proceed?"
-msgstr "Baigęs įrašymą, laikmatis nori įjungti Jūsų imtuvą į budėjimo būseną. Atlikti tai jau dabar?"
+msgstr ""
+"Baigęs įrašymą, laikmatis nori įjungti Jūsų\n"
+"imtuvą į budėjimo būseną. Atlikti tai jau dabar?"
 
+#, fuzzy
 msgid "A completed recording timer is about to shut down your receiver. Would you like to proceed?"
-msgstr "Baigęs įrašymą, laikmatis nori išjungti Jūsų imtuvą. Išjungti dabar?"
+msgstr ""
+"Baigęs įrašymą, laikmatis nori išjungti\n"
+"Jūsų imtuvą. Išjungti dabar?"
 
-#, python-format
+#, fuzzy, python-format
 msgid "A configuration file (%s) has been modified since it was installed. Would you like to keep the modified version?"
-msgstr "Konfigūracijos failas (%s) po įdiegimo buvo pakeistas. Ar norite išsaugoti šiuos savo pakeitimus?"
+msgstr ""
+"Konfigūracijos failas (%s) po įdiegimo buvo pakeistas.\n"
+"Ar norite išsaugoti šiuos savo pakeitimus?"
 
 msgid "A file from media is in use!"
 msgstr "Medijos failas yra naudojamas!"
@@ -527,7 +535,7 @@ msgid ""
 "A recording has started:\n"
 "%s"
 msgstr ""
-"Įrašymas prasidėjo:\n"
+"Prasidėjo įrašymas:\n"
 "%s"
 
 msgid "A recording is currently running on the selected tuner. Please select a different tuner or stop the recording and try again."
@@ -540,14 +548,16 @@ msgstr ""
 "Dabar vyksta įrašymas.\n"
 "Ką norite padaryti?"
 
+#, fuzzy
 msgid "A recording is currently running. Please stop the recording before starting a DiSEqC test."
-msgstr "Dabar vyksta įrašymas. Prieš tikrindami DiSEqC, nutraukite įrašymą."
+msgstr "Dabar vyksta įrašymas. Prieš paiešką, išjunkite įrašymą."
 
+#, fuzzy
 msgid "A recording is currently running. Please stop the recording before starting a service scan."
 msgstr "Dabar vyksta įrašymas. Prieš paiešką, išjunkite įrašymą."
 
 msgid "A repeating event is currently recording. What would you like to do?"
-msgstr "Kartojamas įvykis dabar įrašinėjamas. Ką jūs norite daryti?"
+msgstr "Pasikartojantis įvykis šiuo metu įrašomas. Ką norėtumėte daryti?"
 
 #, python-format
 msgid "A required tool (%s) was not found."
@@ -565,11 +575,17 @@ msgstr ""
 "\n"
 "Ar norite išjungti antrąją tinklo sąsają?"
 
+#, fuzzy
 msgid "A sleep timer is about to put your receiver in standby mode. Would you like to proceed?"
-msgstr "Miego laikmatis nori perjungti Jūsų imtuvą į budėjimo būseną. Atlikti tai dabar?"
+msgstr ""
+"Miego laikmatis nori perjungti Jūsų imtuvą\n"
+"į budėjimo būseną. Atlikti tai dabar?"
 
+#, fuzzy
 msgid "A sleep timer is about to shut down your receiver. Would you like to proceed?"
-msgstr "Miego laikmatis nori išjungti Jūsų imtuvą. Išjungti dabar?"
+msgstr ""
+"Miego laikmatis nori išjungti Jūsų imtuvą.\n"
+"Išjungti dabar?"
 
 msgid "A small overview of the available icon states and actions."
 msgstr "Maža galimų logotipų būsenų ir veiksmų su jomis apžvalga."
@@ -830,6 +846,7 @@ msgstr "Leisti 10 bitų"
 msgid "Allow 12bit"
 msgstr "Leisti 12 bitų"
 
+#, fuzzy
 msgid "Allow quitting movie player with exit"
 msgstr "Leisti užverti filmų grotuvą su exit"
 
@@ -1108,8 +1125,9 @@ msgstr "Kūrimas"
 msgid "Auto"
 msgstr "Automatinis"
 
+#, fuzzy
 msgid "Auto DiSEqC"
-msgstr "Automatinis DiSEqC"
+msgstr "Automatinis Diseqc"
 
 msgid "Auto EXIF Orientation rotation/flipping"
 msgstr "Automatinis EXIF ​​orientacijos pasukimas/keitimas"
@@ -1519,7 +1537,7 @@ msgid "Cannot determine"
 msgstr "Nustatyti nepavyko"
 
 msgid "Cannot find any signal ..., aborting !"
-msgstr "Jokio signalo nerasta ..., nutraukiama !"
+msgstr "Jokio signalo nerasta …,  nutraukiama !"
 
 msgid "Cannot find images - please try later"
 msgstr "Negalima sukurti atvaizdų sąrašo - bandykite vėliau"
@@ -2609,8 +2627,9 @@ msgstr "Aptikti kitą imtuvą prieš budėjimą"
 msgid "Detected NIMs:"
 msgstr "Aptikti imtuvai:"
 
+#, fuzzy
 msgid "Detected storage devices:"
-msgstr "Aptiktas HDD:"
+msgstr "Saugojimo įrenginių sąrašas"
 
 msgid "Device name:"
 msgstr "Įrenginio pavadinimas:"
@@ -2919,6 +2938,7 @@ msgstr "Parsisiunčiama"
 msgid "Downloading Image"
 msgstr "Parsiunčiamas atvaizdas"
 
+#, fuzzy
 msgid "Downloading a new packet list. Please wait..."
 msgstr "Bandome parsisiųsti naują paketų sąrašą. Laukite..."
 
@@ -4235,8 +4255,8 @@ msgid ""
 "If you are happy with the result, press OK."
 msgstr ""
 "Jeigu jūsų televizorius turi šviesumo arba kontrasto išplėtimą, išjunkite jį. Jeigu yra kažkas pavadinta \"dinaminis \", nustatykite jį, kaip standartinį. Nustatykite jums tinkamiausią apšviestumo lygį. Sumažinkite TV kontrastą tiek, kiek tai įmanoma.\n"
-"Tada sumažinkite šviesumą tiek, kiek tai įmanoma, bet tik tiek, kad du pačius žemiausius pilkus atspalvius jūsų akis dar skirtų.\n"
-"Dabar nebesirūpinkite šviesiais atspalviais. Jie bus nustatyti sekančiame žingsnyje.\n"
+"Tada sumažinkite šviesumą tiek, kiek tai įmanoma, bet tik tiek, kad du pačius žemiausius pilkus atspalvius jūsų akis dar skirtų. \n"
+"Dabar nebesirūpinkite šviesiais atspalviais . Jie bus nustatyti sekančiame žingsnyje.\n"
 "Kai būsite patenkinti gautu rezultatu, spauskite 'OK'."
 
 msgid "Ignore DVB-C namespace sub network"
@@ -4279,7 +4299,7 @@ msgid "Import from fallback tuner failed, %s"
 msgstr "Importuoti iš nuotolinio imtuvo nepavyko, %s"
 
 msgid "Import from remote receiver URL"
-msgstr "Importuoti iš nuotolinio imtuvo URL"
+msgstr "Importuoti epg iš nuotolinio imtuvo URL"
 
 msgid "Import remote receiver URL"
 msgstr "Importuoti nuotolinio imtuvo URL"
@@ -5129,13 +5149,13 @@ msgid "Moving"
 msgstr "Sukama"
 
 msgid "Moving east..."
-msgstr "Sukama į rytus..."
+msgstr "Juda į rytus..."
 
 msgid "Moving to position"
 msgstr "Sukama į poziciją"
 
 msgid "Moving west..."
-msgstr "Sukama į vakarus..."
+msgstr "Juda į vakarus..."
 
 msgid "Mozambique"
 msgstr "Mozambikas"
@@ -5368,7 +5388,7 @@ msgid "No event info found, recording indefinitely."
 msgstr "Informacija apie įvykius nerasta, tęsiamas įrašymas."
 
 msgid "No fast winding possible yet... but you can use the number buttons to skip forward/backward!"
-msgstr "Greitas persukimas negalimas, bet peršokimui pirmyn-atgal galite naudoti skaičių mygtukus!"
+msgstr "Greitasis persukimas negalimas.., norėdami praleisti pirmyn/atgal, jūs galite naudoti skaičių mygtukus!"
 
 msgid "No free index available"
 msgstr "Nėra laisvų indeksų"
@@ -5521,7 +5541,7 @@ msgid "Not tested:"
 msgstr "Netikrinta:"
 
 msgid "Note: when enabled, and you do want standby mode after wake up, set option 'Startup to Standby' as 'No, except Wakeup timer'."
-msgstr "Pastaba: kai čia įjungta ir po imtuvo pažadinimo, norite pervesti į budėjimo būseną, pasirinkite 'Startuoti imtuvą į budėjimo būseną', kaip 'Ne, išskyrus pažadinimo laikmatį'."
+msgstr "Pastaba: kai čia įjungta ir po imtuvo pažadinimo, norite pervesti į  budėjimo būseną, pasirinkite 'Startuoti imtuvą į budėjimo būseną', kaip 'Ne, išskyrus pažadinimo laikmatį'."
 
 msgid ""
 "Nothing to scan!\n"
@@ -5965,7 +5985,7 @@ msgid "Please select a playlist..."
 msgstr "Prašome išsirinkti grojaraštį..."
 
 msgid "Please select a sub service..."
-msgstr "Prašome pasirinkti subkanalus..."
+msgstr "Prašome pasirinkti subkanalus ..."
 
 msgid "Please select a subservice to record..."
 msgstr "Prašome išsirinkti subkanalą dėl įrašymo..."
@@ -7142,7 +7162,7 @@ msgid "Searching"
 msgstr "Ieškoma"
 
 msgid "Searching east..."
-msgstr "Rytų paieška..."
+msgstr "Ieškoma rytuose..."
 
 msgid "Searching for available updates. Please wait..."
 msgstr "Ieškoma galimų atnaujinimų. Prašome laukti..."
@@ -7151,7 +7171,7 @@ msgid "Searching for new installed or removed packages. Please wait..."
 msgstr "Ieškoma naujai įdiegtų, ar pašalintų paketų. Prašome laukti..."
 
 msgid "Searching west..."
-msgstr "Vakarų paieška..."
+msgstr "Ieškoma vakaruose..."
 
 msgid "Second cable of motorized LNB"
 msgstr "Motorizuotos LNB antrasis kabelis"
@@ -7290,7 +7310,7 @@ msgid "Select channel to record from"
 msgstr "Pasirinkite kanalą įrašymui"
 
 msgid "Select char for replacing newlines in EPG."
-msgstr "Pasirinkite simbolį, skirtą pakeisti naujas linijas EPG."
+msgstr "Pasirinkite simbolį, skirtą pakeisti naujas linijas epg."
 
 msgid "Select copy destination for:"
 msgstr "Pasirinkite kopijos vietą:"
@@ -7328,8 +7348,9 @@ msgstr "Pasirinkite, kaip norite, kad imtuvas išsaugotų tinkamą laiką iš DV
 msgid "Select image"
 msgstr "Pasirinkite atvaizdą"
 
+#, fuzzy
 msgid "Select in which resolution pictures are displayed with picture viewer or movie player."
-msgstr "Konfigūruokite, kokia rezoliucija rodomos nuotraukos nuotraukų naršyklėje ir grotuve."
+msgstr "konfigūruokite, kokia rezoliucija rodomos nuotraukos nuotraukų naršyklėje ir grotuve"
 
 msgid "Select input device"
 msgstr "Pasirinkite įvesties įrenginį"
@@ -7646,7 +7667,7 @@ msgid "Set movielist type."
 msgstr "Nustatykite filmų sąrašo tipą."
 
 msgid "Set persistent PIN code"
-msgstr "PIN kodą padaryti pastoviu"
+msgstr "Nustatyti nuolatinį PIN kodą"
 
 msgid "Set sequence repeats if your aerial system requires this. Normally if the aerial system has been configured correctly sequence repeats will not be necessary. If yours does, recheck you have command order set correctly."
 msgstr "Nustatyti seka pakartoja, jei jūsų antenos sistema to reikalauja. Paprastai, jei antenos sistema buvo tinkamai sukonfigūruota, pakartotinės sekos nebūtinos. Jei tai daroma, pakartotinai patikrinkite ar teisingai nustatyta komanda."
@@ -8706,7 +8727,7 @@ msgstr "TEKSTAS"
 msgid "TRANSLATOR_INFO"
 msgstr ""
 "P&C Adga, adga45@gmail.com\n"
-"Pasvalys, 2021-09-09 versija"
+"Pasvalys, 2021-09-14 versija"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "TS failas per didelis 1 lygio ISO9660!"
@@ -8832,7 +8853,7 @@ msgid ""
 "The directory %s is not writable.\n"
 "Make sure you select a writable directory instead."
 msgstr ""
-"Katalogas %s nėra įrašomas.\n"
+"Katalogas % s nėra įrašomas.\n"
 "Įsitikinkite, kad pasirinkote rašymui tinkamą katalogą."
 
 msgid "The following files were found..."
@@ -8857,7 +8878,7 @@ msgid ""
 msgstr ""
 "Ekrano formato vedlys pabaigė darbą.\n"
 "\n"
-"Pastaba: šį vedlį Jūs galite atsidaryti bet kada vėliau, per\n"
+"Pastaba: šį vedlį Jūs galite atsidaryti bet kada vėliau,  per\n"
 "\n"
 "meniu > Diegimas > Sistema > Ekrano formato vedlys"
 
@@ -8972,7 +8993,7 @@ msgid "This DVD RW medium is already formatted - reformatting will erase all con
 msgstr "Šis DVD RW diskas jau yra suformatuotas - formatavimas iš naujo, ištrins visą disko turinį."
 
 msgid "This bouquet is protected by a parental control PIN"
-msgstr "Šis paketas apsaugotas tėvų kontrolės PIN kodu"
+msgstr "šis paketas apsaugotas tėvų kontrolės PIN kodu"
 
 msgid "This can be useful when using the CI(+) module. After the end of the recording, the service will be automatically stopped."
 msgstr "Tai gali būti naudinga naudojant CI(+) modulį. Pasibaigus įrašymui, paslauga bus automatiškai sustabdyta."
@@ -9127,7 +9148,7 @@ msgid "This receiver cannot decode %s streams!"
 msgstr "Šis imtuvas negali iššifruoti %s srautų!"
 
 msgid "This service is protected by a parental control PIN"
-msgstr "Šis kanalas apsaugotas tėvų kontrolės PIN kodu"
+msgstr "šis kanalas apsaugotas tėvų kontrolės PIN kodu"
 
 msgid "This setting allows the tuner configuration to be a duplication of how another tuner is already configured."
 msgstr "Šis nustatymas leidžia nustatyti imtuvo konfigūraciją, kad dubliuoti kito imtuvo nustatymus."
@@ -9379,8 +9400,9 @@ msgstr "Tongų"
 msgid "Top and bottom"
 msgstr "Viršuje ir apačioje"
 
+#, fuzzy
 msgid "Total clients streaming: "
-msgstr "Iš viso srautu besinaudojančių klientų: "
+msgstr "Iš viso srautu besinaudojančių klientų: %d ( %s)"
 
 msgid "Track"
 msgstr "Takelis"
@@ -9803,8 +9825,9 @@ msgstr "Vartotojo ID"
 msgid "User Mode"
 msgstr "Vartotojo režimas"
 
+#, fuzzy
 msgid "User bouquets"
-msgstr "Vartotojas paketai"
+msgstr "Vartotojas - paketai"
 
 msgid "User defined"
 msgstr "Vartotojo nustatytas"
@@ -10227,7 +10250,7 @@ msgid "When enabled, a warning will be displayed and the user will get an option
 msgstr "Kai čia įjungta, bus rodomas perspėjimas, ir vartotojas gaus galimybę sustabdyti ar toliau naudoti laiko poslinkį."
 
 msgid "When enabled, always descramble receiving http streams. This takes up more resources (descrambling demuxers), only enable if necessary. Individual streams are always descrambled if 0x100 is added to the service type, regardless of this setting. Default off."
-msgstr "Kai čia įjungta, gaunamas http srautas bus visada iškoduojamas. Tai pareikalaus gerokai daugiau resursų, todėl įjunkite tik kai būtina. Atskiri srautai visada iškoduojami nepaisant šio nustatymo, jei prie kanalo tipo įrašyta 0x100. Numatytasis yra 'ne'."
+msgstr "Kai čia įjungta, gaunamas http srautas bus visada iškoduojamas. Tai pareikalaus gerokai daugiau resursų, todėl įjunkite tik kai būtina. Atskiri srautai visada iškoduojami nepaisant šio nustatymo, jei prie kanalo tipo įrašyta  0x100. Numatytasis yra 'ne'."
 
 msgid "When enabled, authentication is required to watch http streams."
 msgstr "Kai čia įjungta, autentifikavimas reikalingas, kad žiūrėti http srautus."
@@ -10271,6 +10294,7 @@ msgstr "Kai čia įjungta, grafiniai DVB subtitrai bus rodomi ne numatytosios, b
 msgid "When enabled, http streams are descrambled on the server side. The (remote) client receiver does not have to do descrambling. Default on."
 msgstr "Kai čia įjungta, http srautai bus dekoduojami serveryje. Kliento imtuvui nereikės to daryti. Numatytasis: 'Taip'."
 
+#, fuzzy
 msgid "When enabled, it is possible to leave the movie player with exit."
 msgstr "Kai čia įjungta, iš filmų grotuvo galima išeiti mygtuku exit."
 
@@ -10299,7 +10323,7 @@ msgid "When enabled, subtitles for the hearing impaired will be preferred over n
 msgstr "Kai čia įjungta, jei galimi abiejų tipų subtitrai, vietoje įprastų subtitrų bus rodomi subtitrai turintiems klausos sutrikimų."
 
 msgid "When enabled, teletext pages will be cached, allowing faster access."
-msgstr "Kai čia įjungta, teleteksto puslapiai bus išsaugojami atminties podėlyje, taip paspartinant jų naudojimą."
+msgstr "Kai čia įjungta,  teleteksto puslapiai bus išsaugojami atminties podėlyje, taip paspartinant jų naudojimą."
 
 msgid "When enabled, teletext subtitles will be displayed at their original position."
 msgstr "Kai čia įjungta, teleteksto subtitrai bus rodomi jų numatytojoje vietoje."
@@ -10613,9 +10637,9 @@ msgstr ""
 "Jūsų interneto prisijungimas neveikia!\n"
 "Prašome pasirinkti tai, ką jūs norite padaryti vėliau."
 
-#, python-format
+#, fuzzy, python-format
 msgid "Your internet connection is working (IP address: %s)"
-msgstr "Jūsų interneto ryšys veikia (IP: %s)"
+msgstr "Jūsų interneto ryšys veikia (ip: %s)"
 
 msgid "Your network configuration has been activated."
 msgstr "Jūsų tinklo konfigūracija aktyvuota."
@@ -10856,7 +10880,7 @@ msgid "background image"
 msgstr "fono paveikslėlis"
 
 msgid "backup EPG cache"
-msgstr "EPG talpyklos atsarginė kopija"
+msgstr "atsarginė EPG talpyklos kopija"
 
 msgid "ballet"
 msgstr "baletas"
@@ -11016,7 +11040,7 @@ msgid "equestrian"
 msgstr "jojimas"
 
 msgid "error starting scan"
-msgstr "klaida, pradedant skenavimą"
+msgstr "klaida paleidžiant nuskaitymą"
 
 msgid "error while scanning"
 msgstr "klaida, skenuojant"
