--- a/po/fr.po
+++ b/po/fr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-09-17 22:15+0300\n"
-"PO-Revision-Date: 2021-09-12 10:10+0200\n"
+"PO-Revision-Date: 2021-09-18 10:40+0200\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
 "Language: fr\n"
@@ -223,11 +223,11 @@ msgstr "%d minutes"
 msgid "%d ms"
 msgstr "%d ms"
 
-#, fuzzy, python-format
+#, python-format
 msgid "%d package selected."
 msgid_plural "%d packages selected."
-msgstr[0] " Paquets sélectionnés."
-msgstr[1] " Paquets sélectionnés."
+msgstr[0] " %d paquet sélectionné."
+msgstr[1] " %d paquets sélectionnés."
 
 #, python-format
 msgid "%d pixel wide"
@@ -8691,7 +8691,7 @@ msgstr ""
 "\n"
 "Traducteur: Pr2\n"
 "Support: www.openpli.org\n"
-"Dernière MAJ: 12-09-2021"
+"Dernière MAJ: 18-09-2021"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "Fichier TS trop grand pour le niveau 1 ISO9660!"
@@ -9912,9 +9912,9 @@ msgstr "Afficher Rass interactif..."
 msgid "View details"
 msgstr "Voir les détails"
 
-#, fuzzy, python-format
+#, python-format
 msgid "View list of available %s extensions."
-msgstr "Voir liste extensions EPG disponibles."
+msgstr "Voir la liste des %s extensions disponibles."
 
 msgid "View list of available CommonInterface extensions"
 msgstr "Voir liste extensions Interface Commune disponibles."
@@ -11164,9 +11164,8 @@ msgstr "Se rendre vers le titre suivant"
 msgid "jump to chapter by number"
 msgstr "Aller au chapitre par numéro"
 
-#, fuzzy
 msgid "kB"
-msgstr "B"
+msgstr "ko"
 
 msgid "languages"
 msgstr "Langues"
