--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-11-04 07:57+0100\n"
+"POT-Creation-Date: 2021-11-05 15:36+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -10062,7 +10062,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®4. 11. 2021"
+"®7. 11. 2021"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -11514,6 +11514,9 @@ msgstr "Text virtuální klávesnice:"
 #
 msgid "Virtual keyboard"
 msgstr "Virtuální klávesnice"
+
+msgid "Visual impaired commentary"
+msgstr "Komentář pro zrakově postižené"
 
 #
 msgid "Voltage mode"
