--- a/po/cs.po
+++ b/po/cs.po
@@ -11515,7 +11515,7 @@ msgstr "Text virtuální klávesnice:"
 msgid "Virtual keyboard"
 msgstr "Virtuální klávesnice"
 
-msgid "Visual impaired commentary"
+msgid "Visually impaired commentary"
 msgstr "Komentář pro zrakově postižené"
 
 #
