--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-11-07 10:36+0100\n"
+"POT-Creation-Date: 2021-11-08 07:19+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -1215,6 +1215,9 @@ msgstr "Audio PID, kodek & jazyk"
 
 msgid "Audio auto volume level"
 msgstr "Automatická úroveň hlasitosti"
+
+msgid "Audio description for the visually impaired"
+msgstr "Zvukový popis pro zrakově postižené"
 
 #
 msgid "Audio language selection 1"
@@ -10062,7 +10065,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®7. 11. 2021"
+"®8. 11. 2021"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -11514,9 +11517,6 @@ msgstr "Text virtuální klávesnice:"
 #
 msgid "Virtual keyboard"
 msgstr "Virtuální klávesnice"
-
-msgid "Visually impaired commentary"
-msgstr "Komentář pro zrakově postižené"
 
 #
 msgid "Voltage mode"
