--- a/po/uk.po
+++ b/po/uk.po
@@ -1079,7 +1079,7 @@ msgid "Audio auto volume level"
 msgstr "Рівень для автоматичної гучності звуку"
 
 msgid "Audio description for the visually impaired"
-msgstr ""
+msgstr "Аудіо опис для людей з вадами зору"
 
 msgid "Audio language selection 1"
 msgstr "Вибір мови Аудіо 1"
@@ -1704,10 +1704,10 @@ msgid "Choose bouquet"
 msgstr "Виберіть фаворитний список"
 
 msgid "Choose whether to scan a single transponder, one satellite or multiple satellites."
-msgstr ""
+msgstr "Виберіть, чи потрібно сканувати один транспондер, один супутник чи декілька супутників."
 
 msgid "Choose whether to scan for free services only or whether to include paid/encrypted services too."
-msgstr ""
+msgstr "Виберіть, чи потрібно сканувати лише відкриті канали, чи включати також платні/кодовані канали."
 
 msgid "Choose which tuner to configure."
 msgstr "Виберіть тюнер для налаштування."
@@ -6705,7 +6705,7 @@ msgid "Remove terrestrial services"
 msgstr "Видалити наземні канали"
 
 msgid "Remove the services on scanned transponders before re-adding services?"
-msgstr ""
+msgstr "Видалити існуючі канали перед повторним скануванням транспондерів?"
 
 msgid "Remove this logfile"
 msgstr "Видалити даний файл логу"
@@ -7136,7 +7136,7 @@ msgid "Scan state"
 msgstr "Стан пошуку"
 
 msgid "Scan using transponders on NIT table? 'No' will use transponders in xml file."
-msgstr ""
+msgstr "Сканувати за допомогою транспондерів по сітці NIT? 'Ні' використовуватиме транспондери з xml файла."
 
 msgid "Scan wireless networks"
 msgstr "Пошук Wі-Fі мереж"
@@ -8764,7 +8764,7 @@ msgstr "ТЕКСТ"
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
 msgid "TRANSLATOR_INFO"
 msgstr ""
-"Переклад:  kvinto - 11.12.2021\n"
+"Переклад:  kvinto - 14.12.2021\n"
 "Сторінка:    https://gisclub.tv\n"
 "                  kvinto@rambler.ru"
 
