--- a/po/ru.po
+++ b/po/ru.po
@@ -3542,11 +3542,11 @@ msgstr ""
 "неактивен"
 
 #, python-format
-msgid "FBC socket %s"
-msgstr "FBC вход %s"
+msgid "Slot %s / FBC in %s"
+msgstr "Слот %s / FBC вход %s"
 
-msgid "FBC virtual"
-msgstr "FBC виртуальный"
+msgid "Slot %s / FBC virtual %s"
+msgstr "Слот %s / FBC виртуальный %s"
 
 msgid "FEC"
 msgstr "FEC"
@@ -8359,7 +8359,7 @@ msgstr "Sri Lanka"
 msgid "Standard"
 msgstr "Cтандарт"
 
-msgid "Standart list"
+msgid "Standard list"
 msgstr "Стандартный список"
 
 msgid "Standby"
@@ -11846,3 +11846,12 @@ msgstr "переключено"
 
 msgid "®"
 msgstr "®"
+
+msgid "standby "
+msgstr "режим ожидания "
+
+msgid "active "
+msgstr "активно "
+
+msgid "Disk state: "
+msgstr "Состояние диска: "
