--- a/po/sk.po
+++ b/po/sk.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-12-08 15:28+0100\n"
+"POT-Creation-Date: 2021-12-22 15:03+0100\n"
 "PO-Revision-Date: 2021-11-30 16:51+0100\n"
 "Last-Translator: Andrej Tobola <andrej.tobola@gmail.com>\n"
 "Language-Team: \n"
@@ -2721,6 +2721,10 @@ msgstr "Vypnuté"
 msgid "Disk space to reserve for recordings (in GB)"
 msgstr "Miesto na disku rezervované pre nahrávky (v GB)"
 
+#, fuzzy
+msgid "Disk state: "
+msgstr "stav vyhľadávania"
+
 msgid "Display 16:9 content as"
 msgstr "Obraz 16:9 zobraziť ako"
 
@@ -3540,13 +3544,6 @@ msgid ""
 msgstr ""
 "Automatický FBC\n"
 "neaktívny"
-
-#, python-format
-msgid "FBC socket %s"
-msgstr "FBC soket %s"
-
-msgid "FBC virtual"
-msgstr "Virtuálne FBC"
 
 msgid "FEC"
 msgstr "Korekcia chybovosti (FEC)"
@@ -8155,6 +8152,14 @@ msgstr "Interval prezentácie (sek.)"
 msgid "Slot %d"
 msgstr "Slot %d"
 
+#, python-format
+msgid "Slot %s / FBC in %s"
+msgstr ""
+
+#, fuzzy, python-format
+msgid "Slot %s / FBC virtual %s"
+msgstr "Virtuálne FBC"
+
 msgid "Slovak"
 msgstr "Slovenčina"
 
@@ -8360,7 +8365,8 @@ msgstr "Srí Lanka"
 msgid "Standard"
 msgstr "Štandardné"
 
-msgid "Standart list"
+#, fuzzy
+msgid "Standard list"
 msgstr "Štandardný zoznam"
 
 msgid "Standby"
@@ -10838,6 +10844,10 @@ msgstr "aktivovať konfiguráciu sieťového adaptéra"
 msgid "active"
 msgstr "aktívne"
 
+#, fuzzy
+msgid "active "
+msgstr "aktívne"
+
 msgid "actual time only"
 msgstr "iba aktuálny čas"
 
@@ -11664,6 +11674,10 @@ msgstr "športový magazín"
 
 msgid "standard"
 msgstr "štandardné"
+
+#, fuzzy
+msgid "standby "
+msgstr "Pohotovostný režim"
 
 msgid "start cut here"
 msgstr "začiatok strihu tu"
