--- a/po/cs.po
+++ b/po/cs.po
@@ -11900,7 +11900,7 @@ msgid "When enabled, the VCR scart option will be shown on the main menu"
 msgstr "Jestliže je povoleno, možnosti VCR scart budou zobrazeny v hlavním menu."
 
 msgid "When enabled, the channel selection list will be hidden while listening to a radio channel. When disabled, the option 'Auto play last service in radio mode' is available."
-msgstr "Povolením bude při poslechu rádia skrytý seznam pro výběr programů. Při zakázání se zpřístupní volba 'Automaticky přehrávat poslední stanici v rádio módu'."
+msgstr "Povolení skryje seznam pro výběr kanálů při poslechu rádia. Při zakázání se zpřístupní volba 'Automaticky přehrávat poslední stanici v rádio módu'."
 
 msgid "When enabled, the infobar will be displayed when a new event starts."
 msgstr "Při povolení bude infobar automaticky zobrazen při začátku každé nové události (pořadu)."
